--- a/atelier/PKGBUILD
+++ b/atelier/PKGBUILD
@@ -5,7 +5,7 @@ pkgrel=1
 epoch=
 pkgdesc="A window manager for X"
 arch=('i686' 'x86_64')
-url="http://shibafu528.info"
+url="http://shibafu528.github.io/atelier"
 license=('MIT')
 groups=()
 depends=('gtk2' 'jansson')
